--- a/04_pytorch_custom_datasets.ipynb
+++ b/04_pytorch_custom_datasets.ipynb
@@ -766,7 +766,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "save_path = './save_model/modelV0_pss.pth'\n",
+    "save_path = './save_model/ModelV0_pss.pth'\n",
     "torch.save(model_0.state_dict(), f=save_path)"
    ]
   },
