what is offests

--- a/05_pytorch_text.ipynb
+++ b/05_pytorch_text.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [
     {
@@ -43,7 +43,7 @@
        " \"Wall St. Bears Claw Back Into the Black (Reuters) Reuters - Short-sellers, Wall Street's dwindling\\\\band of ultra-cynics, are seeing green again.\")"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 113,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [
     {
@@ -104,7 +104,7 @@
        "[335, 282, 423, 62, 1199, 1164, 0, 0]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 117,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [
     {
@@ -124,7 +124,7 @@
        "95811"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 118,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [
     {
@@ -162,7 +162,7 @@
        "[335, 282, 423, 62, 1199, 1164, 0, 0]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 120,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [
     {
@@ -182,7 +182,7 @@
        "11"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 121,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [
     {
@@ -296,7 +296,7 @@
        ")"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 127,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -336,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -365,17 +365,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(<torch.utils.data.dataset.Subset at 0x24722099ed0>,\n",
-       " <torch.utils.data.dataset.Subset at 0x2472209ba60>)"
+       "(<torch.utils.data.dataset.Subset at 0x1c72ba0a140>,\n",
+       " <torch.utils.data.dataset.Subset at 0x1c72ba09660>)"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 130,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -402,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [
     {
@@ -411,7 +411,7 @@
        "(3375, 375, 238)"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 131,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -425,33 +425,135 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 132,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def collate_batch(batch) :\n",
+    "    label_list, text_list, offsets = [], [], [0]\n",
+    "    for _label, _text in batch :\n",
+    "        label_list.append(label_pipeline(_label))\n",
+    "        processed_text = torch.tensor(text_pipeline(_text), dtype=torch.int64)\n",
+    "        text_list.append(processed_text)\n",
+    "        offsets.append(processed_text.size(0))\n",
+    "    label_list = torch.tensor(label_list, dtype=torch.int64)\n",
+    "    offsets = torch.tensor(offsets[:-1]).cumsum(dim=0)\n",
+    "    text_list = torch.cat(text_list)\n",
+    "    return label_list.to(device), text_list.to(device), offsets.to(device)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 133,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "tensor([ 1111,  4276,   465, 14198,    24,   903,     4,   372,  3906,   783,\n",
+      "          864,     3,  7005,     1,    15, 21292,  1862,   677,    62,   189,\n",
+      "          442,     4, 13558,    32,    78,     1,   108,   960,     6,  1322,\n",
+      "          783,   864,     1,    45,     2,   335,    75,   747,   283,   423,\n",
+      "           25,  2328,    12,    83,   435, 18624,     4,  3736,     1]) \n",
+      " torch.Size([49]) \n",
+      " 49\n",
+      "tensor([21633,    84,  3881,    33,   203,   379,    30,   365,   388,  2253,\n",
+      "        25589, 21633, 18953,     3,   141,   199,   125,     8,    76,     6,\n",
+      "            2,   379,  1007,   176,     3,    10,    60,    26, 81390,    17,\n",
+      "           34,  1872,     2,  6465,   199,   125,  4991,  3881,    95,   939,\n",
+      "          379,    66,     5,  3799,   365,   388,     1]) \n",
+      " torch.Size([47]) \n",
+      " 47\n",
+      "tensor([  630,   810,  5938,    11, 10489,     4,   149,   614,  4734,    10,\n",
+      "            2,  1091,    29,  7310,     4,   149,   614,   107,   192,    12,\n",
+      "           83,    37,  2708,    10,    30,  5622,     1,  1093,   149,   614,\n",
+      "        15371,    42,   235, 21795,   839,    17,   214]) \n",
+      " torch.Size([37]) \n",
+      " 37\n",
+      "tensor([  197,   176,  2717,   554,  2550,    11,   605,   574,   608,    13,\n",
+      "           27,    14,    15,   197,   176,   554,    28,  1052,     2,  3641,\n",
+      "            6,     5,   184,  1466,   736,  2550, 10501,     4,   403,    16,\n",
+      "            9,  3093, 22799,     3,    45,  6489,   221,   104,    37, 14848,\n",
+      "            4,     2, 36499,    11,     2,   200,    16,     9,    47,    71,\n",
+      "            3,     5,   131,   176,   293,    26,    10,    65,     1]) \n",
+      " torch.Size([59]) \n",
+      " 59\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[0, 49, 47, 37, 59]"
+      ]
+     },
+     "execution_count": 133,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "r = 0\n",
+    "_offsets = [0]\n",
+    "for _label, _text in split_train :\n",
+    "    a = torch.tensor(text_pipeline(_text))\n",
+    "    print(a ,'\\n', a.shape,'\\n', a.size(0))\n",
+    "    r+=1\n",
+    "    _offsets.append(a.size(0))\n",
+    "    if r == 4 :\n",
+    "        break\n",
+    "_offsets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 134,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([  0,  49,  96, 133])"
+      ]
+     },
+     "execution_count": 134,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "torch.tensor(_offsets[:-1]).cumsum(dim=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 135,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1 | train accuracy 0.411 | valid accuracy 0.516 \n",
       "-----------------------------------------------------------\n",
-      "Epoch 1 | train accuracy 0.8099 | valid accuracy 0.8081 \n",
+      "Epoch 2 | train accuracy 0.571 | valid accuracy 0.620 \n",
       "-----------------------------------------------------------\n",
-      "Epoch 2 | train accuracy 0.8239 | valid accuracy 0.8197 \n",
+      "Epoch 3 | train accuracy 0.664 | valid accuracy 0.705 \n",
       "-----------------------------------------------------------\n",
-      "Epoch 3 | train accuracy 0.8342 | valid accuracy 0.8298 \n",
+      "Epoch 4 | train accuracy 0.728 | valid accuracy 0.758 \n",
       "-----------------------------------------------------------\n",
-      "Epoch 4 | train accuracy 0.8424 | valid accuracy 0.8358 \n",
+      "Epoch 5 | train accuracy 0.769 | valid accuracy 0.788 \n",
       "-----------------------------------------------------------\n",
-      "Epoch 5 | train accuracy 0.8496 | valid accuracy 0.8433 \n",
+      "Epoch 6 | train accuracy 0.795 | valid accuracy 0.808 \n",
       "-----------------------------------------------------------\n",
-      "Epoch 6 | train accuracy 0.8549 | valid accuracy 0.8484 \n",
+      "Epoch 7 | train accuracy 0.813 | valid accuracy 0.820 \n",
       "-----------------------------------------------------------\n",
-      "Epoch 7 | train accuracy 0.8599 | valid accuracy 0.8528 \n",
+      "Epoch 8 | train accuracy 0.827 | valid accuracy 0.829 \n",
       "-----------------------------------------------------------\n",
-      "Epoch 8 | train accuracy 0.8645 | valid accuracy 0.8567 \n",
+      "Epoch 9 | train accuracy 0.838 | valid accuracy 0.836 \n",
       "-----------------------------------------------------------\n",
-      "Epoch 9 | train accuracy 0.8683 | valid accuracy 0.8608 \n",
-      "-----------------------------------------------------------\n",
-      "Epoch 10 | train accuracy 0.8711 | valid accuracy 0.8641 \n"
+      "Epoch 10 | train accuracy 0.846 | valid accuracy 0.841 \n",
+      "-----------------------------------------------------------\n"
      ]
     }
    ],
@@ -466,7 +568,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 136,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 11 | train accuracy 0.853 | valid accuracy 0.847 \n",
+      "-----------------------------------------------------------\n",
+      "Epoch 12 | train accuracy 0.858 | valid accuracy 0.853 \n",
+      "-----------------------------------------------------------\n",
+      "Epoch 13 | train accuracy 0.863 | valid accuracy 0.857 \n",
+      "-----------------------------------------------------------\n",
+      "Epoch 14 | train accuracy 0.868 | valid accuracy 0.862 \n",
+      "-----------------------------------------------------------\n",
+      "Epoch 15 | train accuracy 0.871 | valid accuracy 0.864 \n",
+      "-----------------------------------------------------------\n",
+      "Epoch 16 | train accuracy 0.875 | valid accuracy 0.867 \n",
+      "-----------------------------------------------------------\n",
+      "Epoch 17 | train accuracy 0.878 | valid accuracy 0.869 \n",
+      "-----------------------------------------------------------\n",
+      "Epoch 18 | train accuracy 0.880 | valid accuracy 0.871 \n",
+      "-----------------------------------------------------------\n",
+      "Epoch 19 | train accuracy 0.883 | valid accuracy 0.874 \n",
+      "-----------------------------------------------------------\n",
+      "Epoch 20 | train accuracy 0.885 | valid accuracy 0.877 \n",
+      "-----------------------------------------------------------\n"
+     ]
+    }
+   ],
+   "source": [
+    "for epoch in range(11, EPOCHS+11) :\n",
+    "    train_acc, train_loss = train_step(modelV1, train_dataloader, optimizer, loss_fn)\n",
+    "    val_acc, val_loss = test_step(modelV1, val_dataloader, loss_fn)\n",
+    "\n",
+    "    print(f'Epoch {epoch} | train accuracy {train_acc:.3f} | valid accuracy {val_acc:.3f} ')\n",
+    "    print('-' * 59)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 137,
    "metadata": {},
    "outputs": [
     {
@@ -478,7 +621,7 @@
        ")"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 137,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -492,16 +635,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(0.8618697478991597, 0.42128313232620224)"
+       "torch.Size([95811, 64])"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 138,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "modelV1_loaded.state_dict()['embedding.weight'].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 139,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.8696165966386554, 0.39370154457933765)"
+      ]
+     },
+     "execution_count": 139,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -513,7 +676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -532,7 +695,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -551,16 +714,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(tensor([0.0403, 0.9356, 0.0130, 0.0111]), 'Sports')"
+       "(tensor([0.0403, 0.9428, 0.0064, 0.0105]), 'Sports')"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 142,
      "metadata": {},
      "output_type": "execute_result"
     }
